<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e4e5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/publicaci_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/llPublicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/imgUsuario"
                android:layout_width="41dp"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription,MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsuario"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/hector_ventura"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tvFechaPublicacion"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:text="@string/publicado_vie_24_oct"
                    tools:ignore="MissingConstraints"
                    android:layout_marginTop="3dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvPublicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esta_soluci_n_es_correcta"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imgPublicacion"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                tools:ignore="ContentDescription,MissingConstraints"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name"
                android:layout_gravity="center_vertical"
                android:onClick=""
                tools:ignore="ContentDescription,OnClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/_100"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name2"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:onClick=""
                tools:ignore="ContentDescription,OnClick" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name3"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:onClick=""
                tools:ignore="ContentDescription,OnClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/_15"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name4"
                android:layout_marginStart="220dp"
                android:layout_marginEnd="0dp"
                android:layout_gravity="center_vertical"
                android:onClick=""
                tools:ignore="ContentDescription,OnClick" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llComentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPublicacion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentar1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llComentar"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription,MissingConstraints"
                    tools:srcCompat="@tools:sample/avatars" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joham_romucho"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:background="#fff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription,MissingConstraints"
                    tools:srcCompat="@tools:sample/avatars" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario_2"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario_esto_es_un_comentario" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>