<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="532dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="532dp"
            android:background="#FFFFFF"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/texthacer"
                android:layout_width="133dp"
                android:layout_height="29dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/button2"
                android:text="@string/titulo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.029" />

            <Button
                android:id="@+id/button"
                android:layout_width="91dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/texthacer"
                android:text="@string/subir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.747"
                app:layout_constraintStart_toEndOf="@+id/texthacer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <Button
                android:id="@+id/button2"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="27dp"
                android:layout_height="32dp"
                android:layout_below="@+id/button2"
                android:layout_alignParentStart="true"
                android:background="@drawable/img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.039"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/texthacer"
                app:layout_constraintVertical_bias="0.028" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="338dp"
                android:layout_height="292dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/text"
                android:inputType="textMultiLine"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.36" />

            <Button
                android:id="@+id/button3"
                android:layout_width="52dp"
                android:layout_height="44dp"
                android:background="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
                app:layout_constraintVertical_bias="0.051" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/bt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/home_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_profile"
            app:layout_constraintEnd_toStartOf="@+id/bt_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_profile"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_home_selected" />

        <ImageButton
            android:id="@+id/bt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/profile_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_publish"
            app:layout_constraintEnd_toStartOf="@+id/bt_publish"
            app:layout_constraintStart_toEndOf="@+id/bt_home"
            app:layout_constraintTop_toTopOf="@+id/bt_publish"
            app:layout_constraintVertical_bias="0.9"
            app:srcCompat="@mipmap/ic_profile" />

        <ImageButton
            android:id="@+id/bt_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/post_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_notification"
            app:layout_constraintStart_toEndOf="@+id/bt_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_publish" />

        <ImageButton
            android:id="@+id/bt_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/notification_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_publish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_publish"
            app:layout_constraintTop_toTopOf="@+id/bt_publish"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_notificaciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

