<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_dislikes_1"
        android:layout_width="117dp"
        android:layout_height="12dp"
        android:text="@string/publicacion"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_likes_1"
        app:layout_constraintVertical_bias="0.001" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tv_likes_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoDentroDeLaPublicacion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="215dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/campos2" />

    <ImageView
        android:id="@+id/img_user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gp_reactions_1"
        android:layout_width="261dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_content_1"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton21"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.578"
            app:srcCompat="@mipmap/ic_like" />

        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.578"
            app:srcCompat="@mipmap/ic_dislike" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="12.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton19"
            app:layout_constraintEnd_toStartOf="@+id/imageButton19"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton21"
            app:layout_constraintTop_toTopOf="@+id/imageButton19"
            app:layout_constraintVertical_bias="0.578" />

        <ImageButton
            android:id="@+id/bt_cmt_1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.578"
            app:srcCompat="@mipmap/ic_comment" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="12.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_cmt_1"
            app:layout_constraintEnd_toStartOf="@+id/bt_cmt_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton19"
            app:layout_constraintTop_toTopOf="@+id/bt_cmt_1"
            app:layout_constraintVertical_bias="0.578" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 respuestas"
            android:textSize="12.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bt_cmt_1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/bt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/home_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_profile"
            app:layout_constraintEnd_toStartOf="@+id/bt_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_profile"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_home_selected" />

        <ImageButton
            android:id="@+id/bt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/profile_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_publish"
            app:layout_constraintEnd_toStartOf="@+id/bt_publish"
            app:layout_constraintStart_toEndOf="@+id/bt_home"
            app:layout_constraintTop_toTopOf="@+id/bt_publish"
            app:layout_constraintVertical_bias="0.9"
            app:srcCompat="@mipmap/ic_profile" />

        <ImageButton
            android:id="@+id/bt_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/post_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_notification"
            app:layout_constraintStart_toEndOf="@+id/bt_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_publish" />

        <ImageButton
            android:id="@+id/bt_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/notification_description"
            app:layout_constraintBottom_toBottomOf="@+id/bt_publish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_publish"
            app:layout_constraintTop_toTopOf="@+id/bt_publish"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_notificaciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
